Added objectives, sub-objevtives and some automation
