# docs/swagger.json
@@ -27,6 +27,52 @@
                 }
             }
         },
+        "/getObjectives": {
+            "get": {
+                "description": "Responds with the all pbjective",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "getObjectives"
+                ],
+                "summary": "Get Objective",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Objectives"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/getSubObjectives": {
+            "get": {
+                "description": "Responds with the all pbjective",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "getSubObjectives"
+                ],
+                "summary": "Get Sub Objectives",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.SubObjectives"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/getSubjectContent": {
             "get": {
                 "description": "Responds with the all subject contents",
@@ -103,10 +149,38 @@
                 }
             }
         },
+        "models.Objectives": {
+            "type": "object",
+            "properties": {
+                "objective": {
+                    "type": "string"
+                },
+                "objectiveId": {
+                    "type": "string"
+                },
+                "subjectContentId": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Pong": {
             "type": "object",
             "properties": {
                 "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.SubObjectives": {
+            "type": "object",
+            "properties": {
+                "objectiveId": {
+                    "type": "string"
+                },
+                "subObjective": {
+                    "type": "string"
+                },
+                "subObjectiveId": {
                     "type": "string"
                 }
             }
